--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -75,10 +75,6 @@ jobs:
         with:
           dotnet-version: 3.1.x
 
-      - name: Setup npm registry
-        run: |
-          echo "${{ secrets.NPMRC }}" > ~/.npmrc
-
       - name: manage pkgs to release
         if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.pkgs }}
         run: bash .github/scripts/lerna.sh ${{github.event.inputs.pkgs}}
@@ -89,8 +85,8 @@ jobs:
 
       - name: Setup git
         run: |
-          git config --global user.name 'MSFT-yiz'
-          git config --global user.email 'yiz@microsoft.com'
+          git config --global user.name 'hund030'
+          git config --global user.email 'zhihuan@microsoft.com'
 
       - name: release alpha npm packages to npmjs.org
         if: ${{ github.ref == 'refs/heads/dev' }}
@@ -222,164 +218,3 @@ jobs:
           token: ${{ secrets.github_token }}
           tag: "template-tag-list"
           allowUpdates: true
-
-      - name: download simpleauth to fx-core
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 10
-          max_attempts: 10
-          retry_on: error
-          command: |
-            bash ./.github/scripts/download-simpleauth.sh
-
-      - name: replace sideloading placeholders
-        run: bash .github/scripts/sideloading-replace.sh
-        env:
-          SIDELOADING_SERVICE_ENDPOINT: ${{ secrets.SIDELOADING_SERVICE_ENDPOINT }}
-          SIDELOADING_SERVICE_SCOPE: ${{ secrets.SIDELOADING_SERVICE_SCOPE }}
-
-      - name: commit change on local
-        run: |
-          git add packages/cli/src/cmds/m365/serviceConstant.ts
-          git commit -m "chore: replace sideloading placeholders"
-
-      - name: publish alpha release to npm org
-        if: ${{ github.ref == 'refs/heads/dev' }}
-        run: |
-          npx lerna publish from-package --dist-tag=alpha --yes --allow-branch dev
-
-      - name: publish beta release to npm org
-        if: ${{ github.ref == 'refs/heads/ga' }}
-        run: |
-          npx lerna publish from-package --dist-tag=beta --yes --allow-branch ga
-
-      - name: update cli ai key
-        if: ${{ github.event_name == 'workflow_dispatch' && (github.event.inputs.preid == 'stable'||github.event.inputs.preid == 'rc') }}
-        uses: jossef/action-set-json-field@v1
-        with:
-          file: ./packages/cli/package.json
-          field: aiKey
-          value: ${{ secrets.CLI_PUBLIC_AIKEY }}
-
-      - name: update extension ai key
-        if: ${{ github.event_name == 'workflow_dispatch' && (github.event.inputs.preid == 'stable' || github.event.inputs.preid == 'rc') }}
-        uses: jossef/action-set-json-field@v1
-        with:
-          file: ./packages/vscode-extension/package.json
-          field: aiKey
-          value: ${{ secrets.EXT_PUBLIC_AIKEY }}
-
-      - name: commit change on local
-        if: ${{ github.event_name == 'workflow_dispatch' && (github.event.inputs.preid == 'stable' || github.event.inputs.preid == 'rc') }}
-        run: |
-          git add .
-          git commit -m "chore: update ai key"
-
-      - name: publish rc npm packages to npmjs.org
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' }}
-        run: |
-          npx lerna publish from-package --dist-tag=rc --yes
-
-      - name: publish stable npm packages to npmjs.org
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
-        run: |
-          npx lerna publish from-package --yes
-
-      - name: pack server bits
-        if: ${{ contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx-server') }}
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 10
-          max_attempts: 10
-          retry_on: error
-          command: |
-            sleep 20
-            cd ./packages/server
-            npm run package
-
-      - name: release alpha, beta server bits to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx-server') && (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/ga')  }}
-        uses: ncipollo/release-action@v1.10.0
-        with:
-          token: ${{ secrets.CD_PAT }}
-          tag: "@microsoft/teamsfx-server-${{ steps.version-change.outputs.SERVER_VERSION_NUM }}"
-          artifacts: ./packages/server/lib/*.exe
-          prerelease: true
-          artifactErrorsFailBuild: true
-
-      - name: release RC server bits to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx-server') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc'}}
-        uses: ncipollo/release-action@v1.10.0
-        with:
-          token: ${{ secrets.CD_PAT }}
-          tag: ${{ steps.version-change.outputs.SERVER_VERSION }}
-          artifacts: ./packages/server/lib/*.exe
-          prerelease: true
-          artifactErrorsFailBuild: true
-
-      - name: release stable server bits to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx-server') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
-        uses: ncipollo/release-action@v1.10.0
-        with:
-          token: ${{ secrets.CD_PAT }}
-          tag: ${{ steps.version-change.outputs.SERVER_VERSION }}
-          artifacts: ./packages/server/lib/*.exe
-          artifactErrorsFailBuild: true
-
-      - name: pack vsix
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') }}
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 10
-          max_attempts: 10
-          retry_on: error
-          command: |
-            sleep 20
-            cd ./packages/vscode-extension
-            npm install --only=production
-            npx vsce package
-
-      - name: release alpha and beta VSCode extension to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/ga') }}
-        uses: ncipollo/release-action@v1.10.0
-        with:
-          token: ${{ secrets.CD_PAT }}
-          tag: "vscode-extension-${{ steps.version-change.outputs.EXTENSION_VERSION_NUM }}"
-          artifacts: ./packages/**/*.vsix
-          prerelease: true
-          artifactErrorsFailBuild: true
-
-      - name: release RC VSCode extension to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc'}}
-        uses: ncipollo/release-action@v1.10.0
-        with:
-          token: ${{ secrets.CD_PAT }}
-          tag: ${{ steps.version-change.outputs.EXTENSION_VERSION }}
-          artifacts: ./packages/**/*.vsix
-          prerelease: true
-          artifactErrorsFailBuild: true
-
-      - name: release stable VSCode extension to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
-        uses: ncipollo/release-action@v1.10.0
-        with:
-          token: ${{ secrets.CD_PAT }}
-          tag: ${{ steps.version-change.outputs.EXTENSION_VERSION }}
-          artifacts: ./packages/**/*.vsix
-          artifactErrorsFailBuild: true
-          bodyFile: ./CHANGELOG.md
-
-      - name: save release info
-        run: |
-          rm -f changed.txt
-          rm -f versions.json
-          echo ${{steps.version-change.outputs.CHANGED}} > changed.txt
-          npx lerna ls -all --json > versions.json
-
-      - name: upload release info to artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: release
-          path: |
-            changed.txt
-            versions.json
