chore: update template list

--- a/templates/package.json
+++ b/templates/package.json
@@ -47,30 +47,30 @@
     ],
     "templatesV3": [
         "init-infra",
-        "notification-http-timer-trigger-js",
-        "notification-http-timer-trigger-ts",
-        "notification-http-timer-trigger-csharp",
-        "notification-http-trigger-js",
-        "notification-http-trigger-ts",
-        "notification-http-trigger-csharp",
-        "notification-timer-trigger-js",
-        "notification-timer-trigger-ts",
-        "notification-timer-trigger-csharp",
-        "notification-restify-js",
-        "notification-restify-ts",
-        "notification-webapi-csharp",
-        "command-and-response-js",
-        "command-and-response-ts",
-        "command-and-response-csharp",
-        "message-extension-csharp",
-        "m365-tab-js",
-        "m365-tab-ts",
-        "sso-tab-js",
-        "sso-tab-ts",
-        "sso-tab-csharp",
-        "non-sso-tab-js",
-        "non-sso-tab-ts",
-        "non-sso-tab-csharp"
+        "js/notification-http-timer-trigger",
+        "js/notification-http-trigger",
+        "js/notification-timer-trigger",
+        "js/notification-restify",
+        "js/command-and-response",
+        "js/m365-tab",
+        "js/sso-tab",
+        "js/non-sso-tab",
+        "ts/notification-http-timer-trigger",
+        "ts/notification-http-trigger",
+        "ts/notification-timer-trigger",
+        "ts/notification-restify",
+        "ts/command-and-response",
+        "ts/m365-tab",
+        "ts/sso-tab",
+        "ts/non-sso-tab",
+        "csharp/notification-http-timer-trigger",
+        "csharp/notification-http-trigger",
+        "csharp/notification-timer-trigger",
+        "csharp/notification-webapi",
+        "csharp/command-and-response",
+        "csharp/message-extension",
+        "csharp/sso-tab",
+        "csharp/non-sso-tab"
     ],
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^4.19.0",
