--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx",
-  "version": "2.0.1-rc.0",
+  "version": "2.0.1",
   "description": "Microsoft Teams Framework for Node.js and browser.",
   "main": "dist/index.node.cjs.js",
   "browser": "dist/index.esm2017.js",
@@ -49,7 +49,7 @@
     "@azure/identity": "^2.0.1",
     "@azure/msal-browser": "^2.21.0",
     "@azure/msal-node": "~1.1.0",
-    "@microsoft/adaptivecards-tools": "^1.2.1-rc.0",
+    "@microsoft/adaptivecards-tools": "^1.2.1",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "axios": "^0.27.2",
     "botbuilder": ">=4.18.0 <5.0.0",
