--- a/templates/package.json
+++ b/templates/package.json
@@ -1,6 +1,6 @@
 {
     "name": "templates",
-    "version": "1.4.0-rc.0",
+    "version": "1.4.0",
     "private": "true",
     "license": "MIT",
     "scripts": {
